# camljava

./: .gitignore  camljava.opam  dune-project  package.json
.github/workflows/: esy-test.yml
esy.lock/: index.json
lib/: Makefile  discover.sh  dune  jni.ml  jni.mli  jnistubs.c
lib/config/: discover.ml  dune
lib/fr/inria/caml/camljava/: dune
test/: dune  jnitest.ml
