(library
 (name camljava)
 (public_name camljava)
 (foreign_stubs
  (language c)
  (flags
   (:standard
    (:include c_flags.sexp)))
  (names jnistubs))
 (library_flags
  (:standard
   -linkall
   (:include c_library_flags.sexp))))

(rule
 (deps jni.mlp ../Makefile.config ./Makefile)
 (targets jni.ml c_flags.sexp c_library_flags.sexp)
 (action
  (run make OCAMLLIB='%{ocaml-config:standard_library}' %{targets})))

(rule
 (deps
  (:class
   (glob_files fr/inria/caml/camljava/*.class)))
 (target camljava.jar)
 (action
  (run jar cf %{target} %{class})))

(install
 (section lib)
 (files
  (camljava.jar as camljava.jar)))
