(library
 (name camljava)
 (public_name camljava)
 (foreign_stubs
  (language c)
  (flags
   (:standard
    (:include c_flags.sexp)))
  (names jnistubs))
 (library_flags
  (:standard
   -linkall
   (:include library_flags.sexp))))

(rule
 (targets c_flags.sexp library_flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (run %{discover})))

(rule
 (deps jni.mlp)
 (targets jni.ml)
 (action
  (with-stdout-to
   %{targets}
   (run sed -e "s|%PATH%|'$(CAMLJAVALIB)/camljava.jar'|" %{deps}))))

(rule
 (deps
  (:class
   (glob_files fr/inria/caml/camljava/*.class)))
 (target camljava.jar)
 (action
  (run jar cf %{target} %{class})))
