(rule
 (deps
  Boolean.java
  Byte.java
  Callback.java
  Camlint.java
  Char.java
  Double.java
  Exception.java
  Float.java
  Int.java
  Long.java
  Readclass.java
  Short.java)
 (targets
  Boolean.class
  Byte.class
  Callback.class
  Camlint.class
  Char.class
  Double.class
  Exception.class
  Float.class
  Int.class
  Long.class
  Readclass.class
  Short.class)
 (action
  (run javac -g %{deps})))
